Imported Upstream version 1.42.6

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,16 @@ build.static
 FILES
 ^core
 *~
-.pc
 patches
 Makefile
+*.bak
+*.dSYM
 *.o
 *.orig
+*.pc
+*.rej
 *.swp
+00[0-9][1-9]*.patch
 MCONFIG
 asm_types.h
 config.log
@@ -53,6 +57,7 @@ lib/blkid/subdirs
 lib/blkid/test_probe
 lib/blkid/tests/*.ok
 lib/blkid/tests/*.out
+lib/blkid/tests/tmp
 lib/blkid/tst_cache
 lib/blkid/tst_dev
 lib/blkid/tst_devname
@@ -64,6 +69,8 @@ lib/blkid/tst_resolve
 lib/blkid/tst_save
 lib/blkid/tst_tag
 lib/blkid/tst_types
+lib/config.h
+lib/dirpaths.h
 lib/e2p/e2p.pc
 lib/e2p/libe2p.a
 lib/e2p/subdirs
@@ -73,17 +80,25 @@ lib/et/com_err.pc
 lib/et/compile_et
 lib/et/libcom_err.a
 lib/et/subdirs
+lib/ext2fs/crc32c_table.h
 lib/ext2fs/ext2_err.c
 lib/ext2fs/ext2_err.et
 lib/ext2fs/ext2_err.h
 lib/ext2fs/ext2_types.h
 lib/ext2fs/ext2fs.pc
+lib/ext2fs/gen_crc32ctable
 lib/ext2fs/libext2fs.a
 lib/ext2fs/subdirs
 lib/ext2fs/tst_badblocks
+lib/ext2fs/tst_bitmaps
+lib/ext2fs/tst_bitmaps_cmd.c
+lib/ext2fs/tst_bitmaps_out
 lib/ext2fs/tst_bitops
 lib/ext2fs/tst_csum
+lib/ext2fs/tst_crc32c
 lib/ext2fs/tst_icount
+lib/ext2fs/tst_inline
+lib/ext2fs/tst_inode_size
 lib/ext2fs/tst_iscan
 lib/ext2fs/tst_super_size
 lib/ext2fs/tst_types
@@ -91,8 +106,11 @@ lib/libblkid.a
 lib/libcom_err.a
 lib/libe2p.a
 lib/libext2fs.a
+lib/libquota.a
 lib/libss.a
 lib/libuuid.a
+lib/quota/libquota.a
+lib/quota/subdirs
 lib/ss/libss.a
 lib/ss/mk_cmds
 lib/ss/ss.pc
@@ -153,10 +171,12 @@ misc/lsattr.1
 misc/mke2fs
 misc/mke2fs.8
 misc/mke2fs.conf.5
+misc/mke2fs.conf
 misc/mklost+found
 misc/mklost+found.8
 misc/prof_err.c
 misc/prof_err.h
+misc/profile.h
 misc/tune2fs
 misc/tune2fs.8
 misc/uuidd
