--- a/project.config
+++ b/project.config
@@ -2,3 +2,9 @@
 	inheritFrom = domain-base
 [project]
 	state = active
+	description = "Domain: Base;"\n\
+"Maintainers: Chengwei Yang,Shinjae Lee;"\n\
+"Integrators: Gwangho Hwang;"\n\
+"Reviewers: Jungmin Cho;"\n\
+"Licenses: GPL,LGPL-2.0,LGPL-2.0+;"\n\
+
