--- a/project.config
+++ b/project.config
@@ -1,9 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_system/system_framework
 [project]
-	description = "Domain: Base;"\n\
-"Maintainers: Chengwei Yang,Shinjae Lee;"\n\
-"Integrators: Gwangho Hwang;"\n\
-"Reviewers: Jungmin Cho;"\n\
-"Licenses: GPL,LGPL-2.0,LGPL-2.0+;"\n\
-
+	description = "Domain: System / System Framework;"
